--- a/site/host.html
+++ b/site/host.html
@@ -33,6 +33,10 @@
       Join link:
       <div class="kv" id="joinLink" style="margin-top:6px; word-break: break-all;">-</div>
     </div>
+    <div class="small" style="margin-top:10px;">
+  Durum: <span class="kv" id="err">-</span>
+</div>
+
   </div>
 
   <div class="card">
