--- a/site/play.html
+++ b/site/play.html
@@ -41,6 +41,10 @@
 
   <div class="card" id="waitCard" style="display:none;">
     <div class="big">Beklemede…</div>
+    <hr/>
+<div class="big">Top 4</div>
+<div id="top" style="margin-top:10px"></div>
+
     <div class="small">Host başlatınca soru gelir / Leaderboard arasında bekler.</div>
   </div>
 </div>
